# mnist-tf-ros2

./: README.md
mnist_tf/: data.py  evaluate.py  train.py
ros2_ws/src/mnist/: CMakeLists.txt  package.xml
ros2_ws/src/mnist/mnist_tf/: model.py
ros2_ws/src/mnist/scripts/: mnist_service.py
ros2_ws/src/mnist_ament_cmake/: CMakeLists.txt  package.xml
ros2_ws/src/mnist_ament_cmake/scripts/: mnist_service.py
ros2_ws/src/mnist_ament_python/: package.xml  setup.cfg  setup.py
ros2_ws/src/mnist_ament_python/mnist_ament_python/: mnist_service.py
ros2_ws/src/mnist_pubsub/: package.xml  setup.cfg  setup.py
ros2_ws/src/mnist_pubsub/mnist_pubsub/: mnist_publisher.py
